[gd_scene load_steps=21 format=3 uid="uid://d2p71a2bebw30"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_q3vf8"]
[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_r16yf"]
[ext_resource type="Script" path="res://menus/leaderboard.gd" id="3_g6b46"]
[ext_resource type="Texture2D" uid="uid://cxqs7k64c1inl" path="res://assets/art/characters/runner_outline_icon.png" id="5_b2rk4"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="5_vx758"]
[ext_resource type="Theme" uid="uid://ca3ryc4sjsyug" path="res://menus/menu_theme_small.tres" id="6_espp7"]
[ext_resource type="PackedScene" uid="uid://18dk5gmnm6j4" path="res://menus/settings_menu.tscn" id="6_w4s8d"]
[ext_resource type="PackedScene" uid="uid://caauqm4nwd564" path="res://menus/keybinding_menu.tscn" id="12_t30gy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_os5mk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2oow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m3qti"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p57df"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_altli"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1nd2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fkurc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6uovi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_st8an"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d8htp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p6st8"]

[sub_resource type="Environment" id="Environment_tn8g0"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 0.03
glow_blend_mode = 1
glow_hdr_threshold = 0.9

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r16yf")
script = ExtResource("1_q3vf8")

[node name="game_name_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_top = 10.0
offset_right = 31.5
offset_bottom = 38.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Knockout Run"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(255, 0)
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 307.0
offset_bottom = 206.0
theme_override_constants/separation = 12

[node name="login" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(275, 100)
layout_mode = 2
text = "Login
"

[node name="logout" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(275, 100)
layout_mode = 2
text = "Logout
"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 192.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="leaderboard" type="VBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(900, 650)
layout_mode = 2
script = ExtResource("3_g6b46")

[node name="title_container" type="CenterContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard"]
layout_mode = 2

[node name="leaderboard_label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard/title_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Top 10"

[node name="message_container" type="CenterContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard"]
layout_mode = 2

[node name="message_label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard/message_container"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Loading scores..."

[node name="highscores" type="CenterContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard"]
layout_mode = 2

[node name="score_item_container" type="VBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard/highscores"]
layout_mode = 2

[node name="leaderboard_button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_os5mk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2oow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3qti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p57df")
theme_override_styles/focus = SubResource("StyleBoxEmpty_altli")
text = "Complete Leaderboard"

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="start_button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1nd2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2oow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3qti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p57df")
theme_override_styles/focus = SubResource("StyleBoxEmpty_altli")
text = "Start"

[node name="tutorial_button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1nd2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2oow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3qti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p57df")
theme_override_styles/focus = SubResource("StyleBoxEmpty_altli")
text = "Tutorial"

[node name="settings_button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1nd2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2oow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3qti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p57df")
theme_override_styles/focus = SubResource("StyleBoxEmpty_altli")
text = "Settings
"

[node name="credits_button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1nd2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2oow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3qti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p57df")
theme_override_styles/focus = SubResource("StyleBoxEmpty_altli")
text = "Credits"

[node name="quit_button" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(550, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1nd2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_r2oow")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3qti")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p57df")
theme_override_styles/focus = SubResource("StyleBoxEmpty_altli")
text = "Quit"

[node name="change_color" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 1275.0
offset_top = 920.0
offset_right = 1888.0
offset_bottom = 1048.0
alignment = 1

[node name="Label" type="Label" parent="change_color"]
layout_mode = 2
text = "Change Color:"

[node name="CenterContainer" type="CenterContainer" parent="change_color"]
layout_mode = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="change_color/CenterContainer"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
theme = ExtResource("6_espp7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fkurc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6uovi")
theme_override_styles/hover = SubResource("StyleBoxEmpty_st8an")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_d8htp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p6st8")
color = Color(1, 1, 1, 1)

[node name="runner_outline" type="TextureRect" parent="change_color/CenterContainer"]
modulate = Color(0.239, 1, 0.596, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("5_b2rk4")

[node name="logged_in_user" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -68.0
offset_right = 247.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.984314, 0.423529, 0.423529, 1)
theme_override_font_sizes/font_size = 48
text = "Logged Out"

[node name="settings_menu" parent="." instance=ExtResource("6_w4s8d")]
visible = false
layout_mode = 1

[node name="keybinding_menu" parent="." instance=ExtResource("12_t30gy")]
visible = false
layout_mode = 1

[node name="transition" parent="." instance=ExtResource("5_vx758")]
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 1
grow_vertical = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tn8g0")

[connection signal="pressed" from="VBoxContainer2/login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="VBoxContainer2/logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/leaderboard_button" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/credits_button" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="color_changed" from="change_color/CenterContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
